src/objects/DNBI__dnb_Mapping_Information__c.object
<CustomObject>
    <fields>
        <fullName>DNBI__Entity_Field_Label__c</fullName>
        <label>Entity Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Entity_Field__c</fullName>
        <description>Fields name of Sobject (Account,Lead or Opportunity )</description>
        <label>Entity Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Entity_Type__c</fullName>
        <description>Type of Sobject e.g. Account, lead or Opportunity</description>
        <label>Entity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Selected_Entity_Type__c</fullName>
        <label>Selected Entity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__WebServiceField__c</fullName>
        <description>Information about webservice fields from applyFor CreditEnhancement webservice</description>
        <label>WebServiceField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__WebServiceLabel__c</fullName>
        <label>WebServiceLabel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__WebService_DataType__c</fullName>
        <label>WebService DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__isDefaultMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDefaultMapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNBI__isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>dnb Mapping Information</label>
    <listViews>
        <fullName>DNBI__All_Mapping_records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>DNBI__Entity_Field__c</columns>
        <columns>DNBI__Entity_Field_Label__c</columns>
        <columns>DNBI__Entity_Type__c</columns>
        <columns>DNBI__isDefaultMapping__c</columns>
        <columns>DNBI__isRequired__c</columns>
        <columns>DNBI__Selected_Entity_Type__c</columns>
        <columns>DNBI__WebService_DataType__c</columns>
        <columns>DNBI__WebServiceField__c</columns>
        <columns>DNBI__WebServiceLabel__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Mapping records</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>dnb Mapping Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dnb Mapping Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>